snapshots/syntax/library/functions/conversion/oct/oct_property_assignment.snap
---
source: src/syntax/library/functions/conversion/oct.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: Newline
      text: "\n"
    - kind: SetStatement
      children:
        - kind: SetKeyword
          text: Set
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: obj
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: NewKeyword
          text: New
        - kind: Whitespace
          text: " "
        - kind: Identifier
          text: BaseConverter
        - kind: Newline
          text: "\n"
    - kind: AssignmentStatement
      children:
        - kind: MemberAccessExpression
          children:
            - kind: Identifier
              text: obj
            - kind: PeriodOperator
              text: "."
            - kind: Identifier
              text: OctalString
        - kind: Whitespace
          text: " "
        - kind: EqualityOperator
          text: "="
        - kind: Whitespace
          text: " "
        - kind: CallExpression
          children:
            - kind: Identifier
              text: Oct
            - kind: LeftParenthesis
              text: (
            - kind: ArgumentList
              children:
                - kind: Argument
                  children:
                    - kind: MemberAccessExpression
                      children:
                        - kind: Identifier
                          text: obj
                        - kind: PeriodOperator
                          text: "."
                        - kind: Identifier
                          text: DecimalValue
            - kind: RightParenthesis
              text: )
        - kind: Newline
          text: "\n"
